# parallel-automaton

./: CMakeLists.txt
examples/: maxtomat.txt
src/: automaton.c  automaton.h  config.h  in_out.c  in_out.h  run.c  tester.c  tester_info.h  validator.c
